# timescaledb

./: CMakeLists.txt  test-upsert-setup.sql
sql/: CMakeLists.txt  background_jobs.sql  bgw_scheduler.sql  ddl_triggers.sql
sql/catalog/: init_bgw.sql
sql/updates/: pre-update.sql
src/: CMakeLists.txt  background_jobs.c  background_jobs.h  bgw_launcher_interface.c  bgw_launcher_interface.h  bgw_scheduler.c  bgw_scheduler.h  catalog.c  chunk.c  chunk_adaptive.c  chunk_constraint.c  chunk_dispatch_plan.c  chunk_dispatch_state.c  chunk_index.c  chunk_insert_state.c  compat.h  constraint_aware_append.c  continuous_aggs_cache_invalidation.c  copy.c  dimension.c  extension.h  extension_utils.c  hypertable.c  hypertable.h  hypertable_cache.c  indexing.c  init.c  plan_expand_hypertable.c  planner.c  process_utility.c  timescale_bgw.c  timescale_bgw.h  timescale_bgw_utils.c  trigger.c  utils.c
src/bgw/: job.c  job_stat.c
src/loader/: CMakeLists.txt  bgw_counter.c  bgw_counter.h  bgw_launcher.c  bgw_message_queue.c  bgw_message_queue.h  loader.c  loader_guc.c  loader_guc.h  timescale_bgw.c  timescale_bgw.h  timescale_bgw_internal.h  timescale_bgw_launcher.c  timescale_bgw_launcher.h  tsbgw_counter.c  tsbgw_counter.h  tsbgw_interface.c  tsbgw_interface.h  tsbgw_launcher.c  tsbgw_launcher.h  tsbgw_message_queue.c  tsbgw_message_queue.h
src/telemetry/: uuid.c
test/expected/: alternate_users-11.out  alternate_users-9.6.out  append.out  append_unoptimized.out  append_x_diff.out  background_worker.out  bgw_launcher.out  bgw_scheduler.out  create_hypertable.out  insert.out  (+7 more)
(+10 files in other folders)
